--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
  "devDependencies": {
   "@next/eslint-plugin-next": "15.0.4",
   "@react-types/shared": "3.25.0",
+  "@types/js-cookie": "^3.0.6",
   "@types/node": "20.5.7",
   "@types/react": "18.3.3",
   "@types/react-dom": "18.3.0",
