--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "@react-aria/visually-hidden": "3.8.19",
   "clsx": "2.1.1",
   "firebase": "^11.4.0",
+  "firebase-admin": "^13.2.0",
   "framer-motion": "11.13.1",
   "intl-messageformat": "^10.5.0",
+  "js-cookie": "^3.0.5",
   "next": "15.0.4",
   "next-themes": "^0.4.4",
   "react": "18.3.1",
